# pocket-tts

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  404.html  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  NUMPY_RUST_PORT_VERIFICATION.md  NUMPY_TO_RUST_COMPLETION_PLAN.md  OPTIMIZATION_REPORT.md  Quantisize.md  README.md  SESSION_PROGRESS.md  benchmark_optimization.py  ddistro_install.sh  debug_broadcast.rs  debug_tars.py  deploy.sh  docker-bake.hcl  docker-compose.yaml  docker-compose.yml  en-prabhudayal-sample.m4a  example.env  extract_decoder_refs.py  extract_refs.py  flake.nix  index.html  init_ralph.py  inspect_wav.py  mkdocs.yml  objects.inv  performance_improvements.py  pixi.toml  profile_numpy_usage.py  pyproject.toml  (+8 more)
assets/: ref_decoder_intermediates.safetensors  ref_mimi_input.safetensors  ref_voice_conditioning.safetensors
docs/: 404.html  architecture.md  benchmark_results.md  command-map.md  comprehensive_validation_report.md  cross_language_testing_framework.md  current_state.md  docker.md  generate.md  index.html  inference_optimizations.md  issue-template-ralph.md  model_versioning.md  objects.inv  onboarding.md  pocket-tts-example.ipynb  python-api.md  quantization.md  serve.md  status-dashboard.html  status-dashboard.md  troubleshooting.md
docs-src/: index.md
electron/: .gitignore  build-main.js  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.main.json  tsconfig.node.json  vite.config.ts
examples/: __init__.py  analyze_audio.py  clone_tars_v2.py  clone_tars_v3.py  voice_cloning_tars.py
macos-service/: PHASE4_COMPLETE.md  PLAN.md  README.md
pocket_tts/: AGENTS.md  __init__.py  default_parameters.py  emotts.py  main.py  numpy_rs.py  numpy_rs_ctypes.draft.py  quantization.py  rust_audio.py  websocket_server.py
python-reference/: README.md
quantization/: index.html
ralph/: AGENTS.md  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_plan.md  PROMPT_plan_work.md  loop.sh
rust-numpy/: AGENTS.md  API_REFERENCE.md  ARCHITECTURE_ANALYSIS.md  Cargo.toml  DTYPE_ARCHITECTURE_ANALYSIS.md  DTYPE_CODE_SNIPPETS.md  DTYPE_MISSING_TYPES.md  DTYPE_QUICK_REFERENCE.md  EXAMPLES.md  GAPS_IMPLEMENTATION_PLAN.md  GAP_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  INVENTORY.md  PARITY.md  PARITY_AND_GAP_ANALYSIS.md  PERFORMANCE_ANALYSIS.md  PROGRESS_SUMMARY.md  PYO3_INTEGRATION.md  QUICK_REFERENCE.md  README.md  README_DTYPE.md  RULES.md  SESSION_STATE.md  audit.toml  task.md  test_fft.rs  test_io_simple.rs  test_random_syntax.rs
rust-numpy/benches/: comprehensive_benchmarks.rs
rust-numpy/docs/: EXECUTION_ENGINE_ROADMAP.md
rust-numpy/examples/: test_bitwise.rs  test_bitwise_simple.rs  test_log.rs  test_unwrap_debug.rs
rust-numpy/github-issues-branch-plan/: README.md  create_issues.sh  create_project_board.sh
rust-numpy/scripts/: inventory_scanner.py
rust-numpy/src/: advanced_broadcast.rs  array.rs  array.rs.backup  array_creation.rs  array_extra.rs  array_manipulation.rs  bitwise.rs  broadcasting.rs  char.rs  char_tests.rs  chat-export-01-18-2026-11:47-PM.md  comparison_ufuncs.rs  constants.rs  datetime.rs  dist.rs  dtype.rs  dtype_tests.rs  error.rs  fft.rs  fft_tests.rs  io.rs  io_tests.rs  iterator.rs  lib.rs  linalg.rs  math_ufuncs.rs  matrix.rs  memory.rs  parallel.rs  parallel_ops.rs  python.rs  random.rs  rec.rs  reductions.rs  set_ops.rs  set_ops.rs.backup  simd_ops.rs  simple_sorting_tests.rs  slicing.rs  sorting.rs  (+8 more)
rust-numpy/src/linalg/: bridge.rs  decompositions.rs  eigen.rs  einsum.rs  mod.rs  norms.rs  products.rs  solvers.rs
rust-numpy/src/modules/: ma.rs  mod.rs  testing.rs
rust-numpy/src/polynomial/: chebyshev.rs  exports.rs  hermite.rs  hermite_e.rs  laguerre.rs  legendre.rs  mod.rs  polynomial.rs
rust-numpy/src/random/: mod.rs  random_state.rs
rust-numpy/src/simd/: mod.rs
rust-numpy/test_random_minimal/src/: lib.rs
rust-numpy/testing_framework/: README.md  generate_golden_data.py
rust-numpy/tests/: advanced_indexing_tests.rs  argminmax_tests.rs  array_clip_round_ptp_tests.rs  array_extra_tests.rs  basic_tests.rs  broadcast_tests.rs  broadcasting_edge_cases.rs  casting_tests.rs  char_additional_tests.rs  choose_compress_tests.rs  comparison_funcs_tests.rs  comparison_tests.rs  comprehensive_tests.rs  conformance_tests.rs  contiguity_tests.rs  diagonal_tests.rs  dist_tests.rs  dtype_tests.rs  eigen_tests.rs  eigenvalue_test.rs  eigh_test.rs  expand_dims_tests.rs  fft_tests.rs  golden_tests.rs  indexing_tests.rs  insert_delete_append_tests.rs  issue_33_slicing.rs  issue_34_broadcast.rs  issue_35_iterator.rs  issue_35_verification.rs  iterator_tests.rs  linalg_286_tests.rs  linalg_287_tests.rs  linalg_conformance.rs  linalg_enhancements.rs  linalg_parity_tests.rs  linalg_products_tests.rs  linalg_qr_tests.rs  linalg_svd_tests.rs  linalg_verification_tests.rs  (+31 more)
rust-numpy/tests/conformance/: conformance_tests.rs
scripts/: README_PROGRESS.md  benchmark.bash  benchmark.ps1  benchmark.py  benchmark.sh  benchmark_threads.py  clawdbot-tts.sh  create-ralph-project-views.sh  cross_language_test_runner.py  demo_progress.py  evaluate_quantization.py  generate_default_voices.py  generate_default_voices.sh  generate_docs.py  generate_golden_data.py  generate_real_world_data.py  generate_simple_data.py  gh-issue-create-safe.sh  kv_cache_report.py  progress_monitor.py  ralph-apply-package.sh  ralph-dashboard-watch.py  ralph-dashboard.py  ralph-lock-acquire.sh  ralph-lock-reap.sh  ralph-lock-release.sh  ralph-log.py  run_comprehensive_validation.py  run_comprehensive_validation_expanded.py  test_numpy_rust_simple.py  update_gap_analysis.py  validate_test_data.py  verify_polynomials.py
search/: search_index.json
specs/: issues.md
test_data/: README.md  SUMMARY.md  VALIDATION_SUMMARY.md  generation_report.json  validation_report.json
tests/: AGENTS.md  test_cli_generate.py  test_custom_path.py  test_documentation_examples.py  test_emotts.py  test_model_versioning.py  (+9 more)
(+391 files in other folders)
