[project]
name = "pocket-tts"
requires-python = ">= 3.10,<3.15"
description = "Kyutai's pocket-sized text-to-speech!"
version = "1.0.3"
readme = "README.md"
dependencies = [
  "torch~=2.10.0",
  "pydantic~=2.12",
  "sentencepiece~=0.2.1",
  "beartype~=0.22.5",
  "safetensors~=0.7.0",
  "typer~=0.10.0",
  "typing_extensions~=4.15.0",
  "fastapi~=0.115.0",
  "uvicorn~=0.40.0",
  "python-multipart~=0.0.21",
  "scipy~=1.17.0",
  "einops~=0.8.0",
  "huggingface_hub~=0.29.0",
  "requests~=2.28.0",
  "pyloudnorm~=0.2.0",
  "librosa~=0.11.0",
  "soundfile~=0.13.1",
  "setuptools~=80.10.0",
  "websockets~=16.0.0",
]

[project.optional-dependencies]
audio = ["soundfile>=0.12.0"]


[dependency-groups]
dev = [
  "coverage>=7.6.12",
  "line-profiler>=5.0.0",
  "mypy>=1.14.0",
  "pytest>=9.0.2",
  "pytest-xdist>=3.8.0",
  "onnx>=1.15.0",
  "onnxruntime>=1.17.0",
  "sphinx>=8.1.3",
  "sphinx-rtd-theme>=3.1.0",
  "sphinx-autodoc-typehints>=3.0.1",
  "myst-parser>=4.0.1",
  "types-PyYAML>=6.0.0",
]


[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100

[tool.ruff.format]
line-ending = "lf"
# avoid having a trailing comma changing
# the behavior of the formatter
skip-magic-trailing-comma = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pocket_tts"]

[project.scripts]
pocket-tts = "pocket_tts.main:cli_app"

[tool.uv]
# System python distribution can have header files missing, so we use only the python
# distributions provided by uv which have everything included.
python-preference = "only-managed"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = false
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
  "torch.*",
  "torchvision.*",
  "sentencepiece.*",
  "safetensors.*",
  "einops.*",
  "huggingface_hub.*",
  "librosa.*",
  "soundfile.*",
  "pyloudnorm.*",
  "websockets.*",
]
ignore_missing_imports = true
